added lorem ipsum placeholder text

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img src="https://placehold.it/480x400/111" alt="placeholder">
         <article>
           <h2>Featured Section Heading</h2>
-          <p></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque lacinia euismod tortor a dapibus. Quisque commodo ex in odio pellentesque tempus. Vivamus convallis mollis ullamcorper. Integer eu tempus ante. Etiam lacinia est eu tortor semper, imperdiet mattis lorem ullamcorper. Nulla sit amet accumsan ligula. Maecenas ac ultrices odio. Praesent eros nibh, pellentesque vel fringilla at, euismod nec turpis. Curabitur et libero et erat imperdiet auctor. Nullam ac fermentum odio. Pellentesque tincidunt, ante eget tempus vehicula, tellus nisi sodales massa, id iaculis quam diam ac massa. Vivamus imperdiet nulla quam, a mattis erat tincidunt dapibus. Integer tincidunt arcu id turpis auctor maximus. Nullam justo mauris, ornare non quam ut, luctus cursus magna.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque lacinia euismod tortor a dapibus. Quisque commodo ex in odio pellentesque tempus. Vivamus convallis mollis ullamcorper. Integer eu tempus ante. Etiam lacinia est eu tortor semper, imperdiet mattis lorem ullamcorper. Nulla sit amet accumsan ligula. Maecenas ac ultrices odio. Praesent eros nibh, pellentesque vel fringilla at, euismod nec turpis. Curabitur et libero et erat imperdiet auctor. Nullam ac fermentum odio. Pellentesque tincidunt, ante eget tempus vehicula, tellus nisi sodales massa, id iaculis quam diam ac massa. Vivamus imperdiet nulla quam, a mattis erat tincidunt dapibus. Integer tincidunt arcu id turpis auctor maximus. Nullam justo mauris, ornare non quam ut, luctus cursus magna.</p>
           <div>Call to Action</div>
         </article>
       </section>
